Fix build and add javadoc